--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -18,6 +18,9 @@
       *{
         font-family: 'Oxanium', Verdana, Geneva, Tahoma, sans-serif !important;
         box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+
       }
     </style>
  
