--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -22,6 +22,9 @@
         padding: 0;
 
       }
+      input::placeholder{
+        color: white !important ;
+      }
     </style>
  
     <title>React App</title>
